--- a/css/profile.css
+++ b/css/profile.css
@@ -86,7 +86,7 @@
 
 .profile__user-info .balance {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     gap: 1.232rem;
     font-size: var(--font-size-3);
     font-weight: 620;
@@ -118,7 +118,7 @@
     background-color: var(--else-accent-color-2);
 }
 
-.profole__user-menu {
+.profile__user-menu {
     display: flex;
     gap: 2.6rem;
     justify-content: space-between;
@@ -126,12 +126,20 @@
     color: var(--else-text-color-50);
 }
 
-.profole__user-menu span {
+.profile__user-menu span {
     cursor: pointer;
     background-color: var(--block-color);
     box-shadow: var(--shadow-small);
     padding: 1rem 4.1rem;
     border-radius: 2rem;
+    transition: 0.2s;
+}
+
+.profile__user-menu span:hover {
+    color: var(--main-text-color);
+    opacity: 50%;
+    background-color: transparent;
+    box-shadow: none;
 }
 
 .profile__posts div, .profile__likes div {
@@ -228,4 +236,5 @@
     justify-content: space-between;
     color: var(--else-text-color-33);
     font-size: var(--font-size-1);
+    text-transform: lowercase;
 }
