--- a/css/wall.css
+++ b/css/wall.css
@@ -81,8 +81,10 @@
     line-height: 110%;
 }
 
-.user-post p span {
+.user-post p a {
     color: var(--main-accent-color);
+    line-height: 110%;
+    font-size: var(--font-size-2);
 }
 
 .user-post > div:first-child {
@@ -220,6 +222,7 @@
 .wall__user-info span {
     font-size: var(--font-size-1);
     color: var(--main-accent-color);
+    text-transform: lowercase;
 }
 
 .wall__comments .current-user {
@@ -270,9 +273,18 @@
     font-size: var(--font-size-1);
     color: var(--else-text-color-50);
     margin-top: 1rem;
+    text-transform: lowercase;
 }
 
 .wall__comments .other-users .div-line {
     margin-left: 6.6rem;
     width: auto;
+}
+
+#checked {
+    background-color: var(--block-accent-color-110);
+}
+
+#checked a {
+    color: var(--else-text-color-50);
 }
