--- a/css/main.css
+++ b/css/main.css
@@ -187,6 +187,24 @@ input {
     line-height: 1;
 }
 
+textarea {
+    font-family: 'Cygre', sans-serif;
+    font-weight: 400;
+    font-size: var(--font-size-1);
+    color: var(--main-text-color);
+    transition: 0.2s;
+    letter-spacing: 0.03px;
+    line-height: 1;
+}
+
+::placeholder {
+    font-family: 'Cygre';
+    font-size: var(--font-size-1);
+    color: var(--else-text-color-50);
+    line-height: var(--font-size-1);
+    vertical-align: middle; 
+}
+
 .auth__section,
 .reg__section {
     max-width: 82.1rem;
@@ -340,6 +358,11 @@ input {
 .reg__input-div span {
     font-size: var(--font-size-1);
     color: var(--else-text-color-33);
+    transition: 0.2s ease-in-out;
+}
+
+.reg__input-div span.done {
+    color: var(--main-accent-color);
 }
 
 .reg__input-div div {
