--- a/css/profile.css
+++ b/css/profile.css
@@ -62,9 +62,10 @@
 }
 
 .profile__user-info .avatar {
-    max-width: 25rem;
-    max-height: 25rem;
+    width: 25rem;
+    height: 25rem;
     border-radius: 12.5rem;
+    object-fit: cover;
 }
 
 .profile__user-info .first-and-second-names {
